--- a/client/src/styles/components/_content-container.scss
+++ b/client/src/styles/components/_content-container.scss
@@ -1,6 +1,12 @@
 .content-container {
-  position:relative;
   top:3%;
+  padding:2% 2% 0 ;
+}
+
+.content-container-2 {
+  position:relative;
+  left: 11%;
+  top:0%;
   padding:2%;
-  max-width: 55rem;
+  max-width: 60rem;
 }
